// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kEqXSa jrBxjN"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kEqXSa jfopKO"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kEqXSa auiEt"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kEqXSa kTuQlg"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kEqXSa gAJEiu"
/>
`;
